--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -56,52 +56,55 @@ fieldset {
 */
 $checkbox_width: 30px;
 $checkbox_height: 17px;
+$checkbox_background: #CDD1DA;
+$checkbox_background_checked: #9FD468;
 $checkbox_dot_gap: 1px;
+$checkbox_dot_color: #FFFFFF;
 $checkbox_dot_size: $checkbox_height - 2 * $checkbox_dot_gap;
 
 input[type=checkbox] {
-  &:not(checked) {
-    // прячем оригинал
-    position: absolute;
-    @include opacity(0);
+  // прячем оригинал
+  position: absolute;
+  width: auto;
+  left: -9999px;
+  @include opacity(0);
 
-    & + label {
-      position: relative;
-      display: inline-block;
-      padding-left: $checkbox_width + 10px;
+  & + label {
+    position: relative;
+    display: inline-block;
+    padding-left: $checkbox_width + 10px;
 
-      &:before {
-        content: '';
-        position: absolute;
-        top: 1px;
-        left: 0;
-        width: $checkbox_width;
-        height: $checkbox_height;
-        background: #CDD1DA;
-        @include border_radius(#{$checkbox_height / 2});
-        @include box-shadow(inset 0 2px 3px rgba(0, 0, 0, 0.2));
-      }
+    &:before {
+      content: '';
+      position: absolute;
+      top: 1px;
+      left: 0;
+      width: $checkbox_width;
+      height: $checkbox_height;
+      background: $checkbox_background;
+      @include border_radius(#{$checkbox_height / 2});
+      @include box-shadow(inset 0 2px 3px rgba(0, 0, 0, 0.2));
+    }
 
-      // переключатель
-      &:after {
-        content: '';
-        position: absolute;
-        top: 1px + $checkbox_dot_gap;
-        left: 1px + $checkbox_dot_gap;
-        width: $checkbox_dot_size;
-        height: $checkbox_dot_size;
-        background: #FFFFFF;
-        @include border_radius(50%);
-        @include transition(left 0.2s);
-        @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
-      }
+    // переключатель
+    &:after {
+      content: '';
+      position: absolute;
+      top: 1px + $checkbox_dot_gap;
+      left: 1px + $checkbox_dot_gap;
+      width: $checkbox_dot_size;
+      height: $checkbox_dot_size;
+      background: $checkbox_dot_color;
+      @include border_radius(50%);
+      @include transition(left 0.2s);
+      @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
     }
   }
 
   &:checked {
     & + label {
       &:before {
-        background: #9FD468;
+        background: $checkbox_background_checked;
       }
 
       &:after {
@@ -111,26 +114,20 @@ input[type=checkbox] {
   }
 
   &:disabled {
-    &:not(checked) {
-      & + label {
-        &:before {
-          background: #EAECF0;
-        }
+    & + label {
+      &:before {
+        background: transparentize($checkbox_background, 0.7);
+      }
 
-        &:after {
-          background: #E0E0E0;
-        }
+      &:after {
+        background: darken($checkbox_dot_color, 10%);
       }
     }
 
     &:checked {
       & + label {
         &:before {
-          background: #B8DF90;
-        }
-
-        &:after {
-          background: #E0E0E0;
+          background: transparentize($checkbox_background_checked, 0.5);
         }
       }
     }
@@ -142,46 +139,49 @@ input[type=checkbox] {
     ОБЯЗАТЕЛЬНО наличие label после input.
 */
 $radiobox_size: 17px;
+$radiobox_background: #FFFFFF;
+$radiobox_border_width: 1px;
+$radiobox_border_color: #CDD1DA;
 $radiobox_dot_gap: 3px;
+$radiobox_dot_color: #9FD468;
 $radiobox_dot_size: $radiobox_size - 2 * $radiobox_dot_gap;
 
 input[type=radio] {
-  &:not(checked) {
-    // прячем оригинал
-    position: absolute;
-    @include opacity(0);
+  // прячем оригинал
+  position: absolute;
+  width: auto;
+  left: -9999px;
+  @include opacity(0);
 
-    & + label {
-      position: relative;
-      display: inline-block;
-      padding-left: $radiobox_size + 10px;
+  & + label {
+    position: relative;
+    display: inline-block;
+    padding-left: $radiobox_size + 10px;
 
-      &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: $radiobox_size;
-        height: $radiobox_size;
-        background: #FFFFFF;
-        border: 1px solid #CDD1DA;
-        @include border_radius(50%);
-      }
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: $radiobox_size;
+      height: $radiobox_size;
+      background: $radiobox_background;
+      border: $radiobox_border_width solid $radiobox_border_color;
+      @include border_radius(50%);
+    }
 
-      // переключатель
-      &:after {
-        content: '';
-        position: absolute;
-        top: 1px + $radiobox_dot_gap;
-        left: 1px + $radiobox_dot_gap;
-        width: $radiobox_dot_size;
-        height: $radiobox_dot_size;
-        background: #9FD468;
-        @include opacity(0);
-        @include border_radius(50%);
-        @include transition(opacity 0.2s);
-        @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.5));
-      }
+    // переключатель
+    &:after {
+      content: '';
+      position: absolute;
+      top: $radiobox_border_width + $radiobox_dot_gap;
+      left: $radiobox_border_width + $radiobox_dot_gap;
+      width: $radiobox_dot_size;
+      height: $radiobox_dot_size;
+      background: $radiobox_dot_color;
+      @include opacity(0);
+      @include border_radius(50%);
+      @include transition(opacity 0.2s);
     }
   }
 
@@ -194,11 +194,9 @@ input[type=radio] {
   }
 
   &:disabled {
-    &:not(checked) {
-      & + label {
-        &:before {
-          background: #EAECF0;
-        }
+    & + label {
+      &:before {
+        background: darken($radiobox_background, 10%);
       }
     }
 
