todo + fix sitemap

--- a/src/apps_common/sitemap/templates/sitemap/index.html
+++ b/src/apps_common/sitemap/templates/sitemap/index.html
@@ -14,7 +14,7 @@
     <div class="title-h1">{{ config.header }}</div>
 
     <div class="map text-styles">
-      {% include 'sitemap/map.html' %}
+      {% include 'sitemap/map.html' with level=1 %}
     </div>
   </div>
 
