--- a/src/apps/users/templates/users/reset.html
+++ b/src/apps/users/templates/users/reset.html
@@ -4,32 +4,28 @@
 
 
 {% block content %}
-  <div class="grid">
-    <div class="gc gc-alone">
-      <h1 class="title-h1">{% trans 'Reset password' %}</h1>
-    </div>
+  <div class="grid-block">
+    <h1 class="title-h1">{% trans 'Reset password' %}</h1>
 
-    <div class="gc gc-alone">
-      {{ form.media }}
-      <form method="post" action="" id="reset-password-form"
-            class="users-reset-password-form users-form" autocomplete="off">
-        {% csrf_token %}
+    {{ form.media }}
+    <form method="post" action="" id="reset-password-form"
+          class="users-reset-password-form users-form" autocomplete="off">
+      {% csrf_token %}
 
-        {{ form.non_field_errors.as_ul }}
-        <fieldset class="{{ form.email.errors.classes }}">
-          {{ form.email.label_tag }}
-          {{ form.email }}
-          {{ form.email.errors }}
-        </fieldset>
+      {{ form.non_field_errors.as_ul }}
+      <fieldset class="{{ form.email.errors.classes }}">
+        {{ form.email.label_tag }}
+        {{ form.email }}
+        {{ form.email.errors }}
+      </fieldset>
 
-        <fieldset>
-          <button type="submit" class="btn">{% trans 'Continue' %}</button>
-        </fieldset>
-      </form>
+      <fieldset>
+        <button type="submit" class="btn">{% trans 'Continue' %}</button>
+      </fieldset>
+    </form>
 
-      <script>
-        document.getElementById('id_email').focus();
-      </script>
-    </div>
+    <script>
+      document.getElementById('id_email').focus();
+    </script>
   </div>
 {% endblock content %}
