--- a/src/static/scss/preloader.scss
+++ b/src/static/scss/preloader.scss
@@ -6,24 +6,20 @@ $bg_color: #FFFFFF;
 
 
 @keyframes loading {
-  0% {
-    border: 0 solid $bg_color;
-  }
-
   20% {
-    border: 8px solid $bg_color;
+    border-width: 8px;
     width: 0;
     height: 0;
   }
 
   90% {
-    border: 8px solid $bg_color;
-    width: 100%;
-    height: 100%;
+    border-width: 8px;
+    width: 87.5%;
+    height: 87.5%;
   }
 
   100% {
-    border: 8px solid transparent;
+    border-width: 0;
     width: 100%;
     height: 100%;
   }
@@ -46,7 +42,7 @@ $bg_color: #FFFFFF;
     top: 50%;
     left: 50%;
     border: 0 solid $bg_color;
-    animation: loading 1000ms ease-out forwards infinite;
+    animation: loading 1000ms linear forwards infinite;
     @include border_radius(50%);
     @include transform(translate(-50%, -50%));
   }
