--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -9,13 +9,13 @@
     <div class="menu-box">
       <span id="mobile-menu-button"></span>
 
-      <div id="main-menu">
+      <nav id="main-menu">
         {% main_menu %}
-      </div>
+      </nav>
 
-      <div id="mobile-menu">
+      <nav id="mobile-menu">
         {% main_menu %}
-      </div>
+      </nav>
     </div>
   </div>
 </header>
