--- a/src/apps_common/multilanguage/templates/multilanguage/allowed_languages.html
+++ b/src/apps_common/multilanguage/templates/multilanguage/allowed_languages.html
@@ -1,10 +1,10 @@
 <div class="langs">
-  {% for lang in langs %}
-    {% if lang.code == current_code %}
-      <span class="lang lang-{{ lang.short_code }} active">{{ lang.short_code }}</span>
+  {% for code in langs %}
+    {% if code == current_code %}
+      <span class="lang lang-{{ code }} active">{{ code }}</span>
     {% else %}
-      <a href="{% url 'multilanguage:set_language' code=lang.code %}"
-         class="lang lang-{{ lang.short_code }}">{{ lang.short_code }}</a>
+      <a href="{% url 'multilanguage:set_language' code=code %}"
+         class="lang lang-{{ code }}">{{ code }}</a>
     {% endif %}
   {% endfor %}
 </div>
