--- a/src/apps/contacts/templates/contacts/ajax_contact.html
+++ b/src/apps/contacts/templates/contacts/ajax_contact.html
@@ -1,22 +1,11 @@
+{% load form_helper %}
 {% load i18n %}
 
 <p class="title title-h1">{{ config.header }}</p>
 
 {{ form.media }}
 <form method="post" action="{% url 'contacts:index' %}" id="ajax-contact-form" autocomplete="off">
-  {% csrf_token %}
-
-  {{ form.non_field_errors.as_ul }}
-
-  {% for field in form.hidden_fields %}
-    {{ field }}
-  {% endfor %}
-
-  {% for field in form.visible_fields %}
-    <fieldset class="{{ field.errors.classes }}">
-      {{ field }}
-    </fieldset>
-  {% endfor %}
+  {% render_form form %}
 
   <fieldset>
     <button type="submit" class="btn">{% trans 'Send' %}</button>
