--- a/src/apps/users/templates/users/reset_complete.html
+++ b/src/apps/users/templates/users/reset_complete.html
@@ -9,7 +9,7 @@
 
 {% block content %}
   <div class="grid-block">
-    <h1 class="title-h1">{% trans 'Reset password' %}</h1>
+    <h1 class="title-h1">{% trans 'Password reset' %}</h1>
 
     <div class="text-styles">
       <p>
