--- a/src/apps/users/templates/users/ajax_login.html
+++ b/src/apps/users/templates/users/ajax_login.html
@@ -1,3 +1,4 @@
+{% load form_helper %}
 {% load i18n %}
 
 <p class="title title-h1">{% trans 'Sign In or Register' %}</p>
@@ -5,23 +6,12 @@
 {{ form.media }}
 <form method="post" action="{% url 'users:login' %}" id="ajax-login-form"
       class="users-login-form users-popup-form users-form" autocomplete="off">
-  {% csrf_token %}
 
-  {{ form.non_field_errors.as_ul }}
-  <fieldset class="{{ form.username.errors.classes }}">
-    {{ form.username.label_tag }}
-    {{ form.username }}
-    {{ form.username.errors }}
-  </fieldset>
-  <fieldset class="{{ form.password.errors.classes }}">
-    {{ form.password.label_tag }}
-    {{ form.password }}
-    {{ form.password.errors }}
-  </fieldset>
+  {% render_form form %}
 
   <fieldset>
     <button type="submit" class="btn">{% trans 'Sign in' %}</button>
     <a href="{% url 'users:reset' %}" class="reset-password-popup">{% trans 'Forgot your password?' %}</a>
-    <a href="{% url 'users:reset' %}" class="register-popup">{% trans 'Registration' %}</a>
+    <a href="{% url 'users:register' %}" class="register-popup">{% trans 'Registration' %}</a>
   </fieldset>
 </form>
