--- a/src/apps/users/templates/users/ajax_reset.html
+++ b/src/apps/users/templates/users/ajax_reset.html
@@ -1,18 +1,13 @@
+{% load form_helper %}
 {% load i18n %}
 
-<p class="title title-h1">{% trans 'Reset password' %}</p>
+<p class="title title-h1">{% trans 'Password reset' %}</p>
 
 {{ form.media }}
 <form method="post" action="" id="ajax-reset-password-form"
       class="users-reset-password-form users-popup-form users-form" autocomplete="off">
-  {% csrf_token %}
 
-  {{ form.non_field_errors.as_ul }}
-  <fieldset class="{{ form.email.errors.classes }}">
-    {{ form.email.label_tag }}
-    {{ form.email }}
-    {{ form.email.errors }}
-  </fieldset>
+  {% render_form form %}
 
   <fieldset>
     <button type="submit" class="btn">{% trans 'Continue' %}</button>
