--- a/src/apps/users/templates/users/register.html
+++ b/src/apps/users/templates/users/register.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 
+{% load form_helper %}
 {% load i18n %}
 
 
@@ -10,38 +11,13 @@
     {{ form.media }}
     <form method="post" action="" id="register-form"
           class="users-register-form users-form" autocomplete="off">
-      {% csrf_token %}
       <input type="hidden" name="next" value="{{ request.GET.next }}">
 
-      {{ form.non_field_errors.as_ul }}
-      <fieldset class="{{ form.username.errors.classes }}">
-        {{ form.username.label_tag }}
-        {{ form.username }}
-        {{ form.username.errors }}
-      </fieldset>
-      <fieldset class="{{ form.email.errors.classes }}">
-        {{ form.email.label_tag }}
-        {{ form.email }}
-        {{ form.email.errors }}
-      </fieldset>
-      <fieldset class="{{ form.password1.errors.classes }}">
-        {{ form.password1.label_tag }}
-        {{ form.password1 }}
-        {{ form.password1.errors }}
-      </fieldset>
-      <fieldset class="{{ form.password2.errors.classes }}">
-        {{ form.password2.label_tag }}
-        {{ form.password2 }}
-        {{ form.password2.errors }}
-      </fieldset>
+      {% render_form form %}
 
       <fieldset>
         <button type="submit" class="btn">{% trans 'Register' %}</button>
       </fieldset>
     </form>
-
-    <script>
-      document.getElementById('id_username').focus();
-    </script>
   </div>
 {% endblock content %}
