--- a/src/apps/users/templates/users/reset_confirm.html
+++ b/src/apps/users/templates/users/reset_confirm.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 
+{% load form_helper %}
 {% load i18n %}
 
 
@@ -10,27 +11,12 @@
     {{ form.media }}
     <form method="post" action="{{ target }}" id="reset-confirm-form"
           class="users-reset-confirm-form users-form" autocomplete="off">
-      {% csrf_token %}
 
-      {{ form.non_field_errors.as_ul }}
-      <fieldset class="{{ form.new_password1.errors.classes }}">
-        {{ form.new_password1.label_tag }}
-        {{ form.new_password1 }}
-        {{ form.new_password1.errors }}
-      </fieldset>
-      <fieldset class="{{ form.new_password2.errors.classes }}">
-        {{ form.new_password2.label_tag }}
-        {{ form.new_password2 }}
-        {{ form.new_password2.errors }}
-      </fieldset>
+      {% render_form form %}
 
       <fieldset>
         <button type="submit" class="btn">{% trans 'Save' %}</button>
       </fieldset>
     </form>
-
-    <script>
-      document.getElementById('id_new_password1').focus();
-    </script>
   </div>
 {% endblock content %}
