--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -24,9 +24,9 @@
     <form method="post" action="" id="contact-form">
       {% render_form form %}
 
-      <fieldset class="buttons">
+      <div class="buttons">
         <button type="submit" class="btn">{% trans 'Send' %}</button>
-      </fieldset>
+      </div>
     </form>
   </div>
 
