--- a/src/apps/users/templates/users/ajax_register.html
+++ b/src/apps/users/templates/users/ajax_register.html
@@ -10,7 +10,7 @@
 
   {% render_form form %}
 
-  <fieldset>
+  <div>
     <button type="submit" class="btn">{% trans 'Register' %}</button>
-  </fieldset>
+  </div>
 </form>
