--- a/src/apps/users/templates/users/ajax_reset.html
+++ b/src/apps/users/templates/users/ajax_reset.html
@@ -9,7 +9,7 @@
 
   {% render_form form %}
 
-  <fieldset>
+  <div>
     <button type="submit" class="btn">{% trans 'Continue' %}</button>
-  </fieldset>
+  </div>
 </form>
