--- a/src/apps/users/templates/users/login.html
+++ b/src/apps/users/templates/users/login.html
@@ -15,9 +15,9 @@
 
       {% render_form form %}
 
-      <fieldset>
+      <div>
         <button type="submit" class="btn">{% trans 'Sign in' %}</button>
-      </fieldset>
+      </div>
     </form>
   </div>
 {% endblock content %}
