--- a/src/apps/users/templates/users/reset_confirm.html
+++ b/src/apps/users/templates/users/reset_confirm.html
@@ -14,9 +14,9 @@
 
       {% render_form form %}
 
-      <fieldset>
+      <div>
         <button type="submit" class="btn">{% trans 'Save' %}</button>
-      </fieldset>
+      </div>
     </form>
   </div>
 {% endblock content %}
