--- a/src/apps_common/comments/templates/comments/comments_block.html
+++ b/src/apps_common/comments/templates/comments/comments_block.html
@@ -12,9 +12,9 @@
       {{ form.object_id }}
       {{ form.hash }}
       {{ form.parent }}
-      <fieldset>
+      <div>
         {{ form.text }}
-      </fieldset>
+      </div>
       <button type="submit" class="btn btn-send disabled" disabled="disabled">{% trans 'Send' %}</button>
       <button type="button" class="btn btn-cancel">{% trans 'Cancel' %}</button>
     </form>
@@ -27,9 +27,9 @@
       {{ form.object_id }}
       {{ form.hash }}
       {{ form.parent }}
-      <fieldset>
+      <div>
         {{ form.text }}
-      </fieldset>
+      </div>
       <button type="submit" class="btn btn-send disabled" disabled="disabled">{% trans 'Save' %}</button>
       <button type="button" class="btn btn-cancel">{% trans 'Cancel' %}</button>
     </form>
