--- a/src/apps_common/comments/templates/comments/comments_form.html
+++ b/src/apps_common/comments/templates/comments/comments_form.html
@@ -8,9 +8,9 @@
       {{ form.object_id }}
       {{ form.hash }}
       {{ form.parent }}
-      <fieldset>
+      <div>
         {{ form.text }}
-      </fieldset>
+      </div>
       <button type="submit" class="btn btn-send disabled" disabled="disabled">{% trans 'Send' %}</button>
     </form>
   {% else %}
