fieldset -> div.field

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -87,46 +87,46 @@
   <div class="block">
     <div class="grid-block">
       <form>
-        <fieldset>
+        <div class="field">
           <input type="checkbox" name="chk" value="1" id="chk1" checked>
           <label for="chk1" ondblclick="return false">One</label>
-        </fieldset>
+        </div>
 
-        <fieldset>
+        <div class="field">
           <input type="checkbox" name="chk" value="2" id="chk2">
           <label for="chk2">Two</label>
-        </fieldset>
+        </div>
 
-        <fieldset>
+        <div class="field">
           <input type="checkbox" name="chk" value="2" id="chk3" disabled>
           <label for="chk3">Two</label>
-        </fieldset>
+        </div>
 
-        <fieldset>
+        <div class="field">
           <input type="checkbox" name="chk" value="2" id="chk3" disabled checked>
           <label for="chk3">Two</label>
-        </fieldset>
+        </div>
 
 
-        <fieldset>
+        <div class="field">
           <input type="radio" name="rad" value="1" id="rad1" checked>
           <label for="rad1" ondblclick="return false">One</label>
-        </fieldset>
+        </div>
 
-        <fieldset>
+        <div class="field">
           <input type="radio" name="rad" value="2" id="rad2">
           <label for="rad2">Two</label>
-        </fieldset>
+        </div>
 
-        <fieldset>
+        <div class="field">
           <input type="radio" name="rad" value="2" id="rad3" disabled>
           <label for="rad3">Two</label>
-        </fieldset>
+        </div>
 
-        <fieldset>
+        <div class="field">
           <input type="radio" name="rad2" value="2" id="rad3" disabled checked>
           <label for="rad3">Two</label>
-        </fieldset>
+        </div>
       </form>
     </div>
   </div>
