--- a/src/apps/users/static/users/scss/users.scss
+++ b/src/apps/users/static/users/scss/users.scss
@@ -5,11 +5,11 @@
 }
 
 #ajax-login-form {
-  .reset-password-popup {
+  .open-reset-password-popup {
     margin-left: 12px;
   }
 
-  .register-popup {
+  .open-register-popup {
     margin-left: 10px;
   }
 }
