--- a/src/apps/users/templates/users/ajax_login.html
+++ b/src/apps/users/templates/users/ajax_login.html
@@ -11,7 +11,7 @@
 
   <div>
     <button type="submit" class="btn">{% trans 'Sign in' %}</button>
-    <a href="{% url 'users:reset' %}" class="reset-password-popup">{% trans 'Forgot your password?' %}</a>
-    <a href="{% url 'users:register' %}" class="register-popup">{% trans 'Registration' %}</a>
+    <a href="{% url 'users:reset' %}" class="open-reset-password-popup">{% trans 'Forgot your password?' %}</a>
+    <a href="{% url 'users:register' %}" class="open-register-popup">{% trans 'Registration' %}</a>
   </div>
 </form>
