--- a/src/apps_common/ckeditor/static/ckeditor/css/ckeditor.css
+++ b/src/apps_common/ckeditor/static/ckeditor/css/ckeditor.css
@@ -41,6 +41,24 @@ p iframe {
     max-width: 90%;
 }
 
+.page-files {
+    margin: 1em 0;
+    background: #dadada;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#dadada));
+    background-image: -moz-linear-gradient(top, #f5f5f5, #dadada);
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #dadada);
+    background-image: -o-linear-gradient(top, #f5f5f5, #dadada);
+    background-image: -ms-linear-gradient(top, #f5f5f5, #dadada);
+    background-image: linear-gradient(top, #f5f5f5, #dadada);
+    filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#fff5f5f5', endColorstr='#ffdadada');
+    border-radius: 10px;
+}
+.page-files .page-file {
+    padding: 6px 0 6px 36px;
+    min-height: 32px;
+    background: url(../img/file.png) no-repeat 2px 6px;
+}
+
 table {
     border: 0 !important;
     border-collapse: collapse;
