--- a/src/apps_common/ckeditor/static/ckeditor/css/ckeditor.css
+++ b/src/apps_common/ckeditor/static/ckeditor/css/ckeditor.css
@@ -58,6 +58,17 @@ p iframe {
     min-height: 32px;
     background: url(../img/file.png) no-repeat 2px 6px;
 }
+.page-files .cke_widget_drag_handler_container {
+    top: 0 !important;
+    width: 100%;
+    height: 100% !important;
+    background: transparent !important;
+}
+.page-files .cke_widget_drag_handler_container img {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+}
 
 table {
     border: 0 !important;
